# CoreX

./: .gitignore  .gitmodules
doc/: V1  V2
doc/warnings/: nrf24driver.txt
docker/: Dockerfile  build.sh  entrypoint.sh  run.sh
zephyr_ws/: CMakeLists.txt  board.overlay  prj.conf
zephyr_ws/corex/: CMakeLists.txt
zephyr_ws/corex/examples/: CMakeLists.txt
zephyr_ws/corex/examples/application/: CMakeLists.txt  main.cpp  prj.conf  teensy41.overlay
zephyr_ws/corex/examples/application/application/: Application.cpp  Application.h  CMakeLists.txt
zephyr_ws/corex/examples/application/boards/: esp32c3_supermini.overlay
zephyr_ws/corex/examples/application/hardware/: BoardConfiguration.cpp  BoardConfiguration.h  CMakeLists.txt
zephyr_ws/corex/examples/application/services/: BlinkService.cpp  BlinkService.h  CMakeLists.txt
zephyr_ws/corex/examples/components/adc/: README.md  prj.conf  teensy41.overlay
zephyr_ws/corex/examples/components/gpio/: README.md  main.cpp  prj.conf
zephyr_ws/corex/examples/components/pwm/: CMakeLists.txt  README.md  main.cpp  prj.conf
zephyr_ws/corex/examples/components/timer/: README.md  main.cpp  prj.conf  teensy41.overlay
zephyr_ws/corex/examples/drivers/adc/: CMakeLists.txt  main.cpp  prj.conf  teensy41.overlay
zephyr_ws/corex/examples/drivers/gpio/: CMakeLists.txt  README.md  main.cpp
zephyr_ws/corex/examples/drivers/gpio/boards/: esp32c3_supermini.overlay  teensy41.overlay
zephyr_ws/corex/examples/drivers/i2c/: CMakeLists.txt  README.md  main.cpp  prj.conf  teensy41.overlay
zephyr_ws/corex/examples/drivers/nrf24/receiver/: CMakeLists.txt  README.md  arduino_portenta_h7_stm32h747xx_m7.overlay  main.cpp  prj.conf
zephyr_ws/corex/examples/drivers/nrf24/transmitter/: CMakeLists.txt  esp32c3_supermini.overlay  main.cpp  prj.conf
zephyr_ws/corex/examples/drivers/pwm/: main.cpp  teensy41.overlay
zephyr_ws/corex/examples/drivers/spi/: CMakeLists.txt  README.md  main.cpp  prj.conf  teensy41.overlay
zephyr_ws/corex/examples/drivers/spi/boards/: esp32c3_supermini.overlay
zephyr_ws/corex/examples/logging/: CMakeLists.txt  main.cpp  prj.conf  teensy41.overlay
zephyr_ws/corex/examples/pwm/: CMakeLists.txt
zephyr_ws/corex/examples/serialmonitor/serial/: CMakeLists.txt  README.md  main.cpp  prj.conf
zephyr_ws/corex/examples/services/adcservice/: CMakeLists.txt  README.md  main.cpp  prj.conf
zephyr_ws/corex/examples/services/timerservice/: CMakeLists.txt  README.md  main.cpp
zephyr_ws/corex/main/: CMakeLists.txt
zephyr_ws/corex/tests/: CMakeLists.txt
zephyr_ws/corex/tests/corekit/: CMakeLists.txt
zephyr_ws/corex/tests/corekit/integration/: CMakeLists.txt  SystemTests.cpp
zephyr_ws/corex/tests/corekit/testcomponent/: CMakeLists.txt  TestComponent.cpp  TestComponent.h
zephyr_ws/corex/tests/corekit/unit/: CMakeLists.txt  SchedulerTests.cpp  SchedulerTestsFixture.cpp  SystemClockTests.cpp  TickCounterTests.cpp  TimerServiceTests.cpp  TimerTests.cpp
zephyr_ws/corex/tests/corekit/unit/drivers/: AdcTests.cpp  CMakeLists.txt  GpioTests.cpp  PwmTests.cpp  SpiTests.cpp
